# multitorch

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  GPU_ACCELERATION_PLAN.md  LICENSE  MODEL_SUMMARY.md  PHASE_3_PLAN.md  README.md  SCIENTIFIC_AUDIT.md  _build_notebooks.py  pyproject.toml
.claude/orchestration/: DEPLOYMENT-AUDIT-FIXES.md  INDEX.md  TRACK-C-PHASE5.md
.claude/orchestration/bugs/: BUG-001-hfs-scf-energies.md  BUG-002-multipole-basis-ordering.md  BUG-003-ct-eigenvalue-offset.md
.claude/orchestration/investigations/: INV-001-ct-eigenvalue-offset.md  INV-002-hfs-energies.md  INV-003-blume-watson.md
bench/: .gitignore  AGENT_HANDOFF.md  AGENT_HANDOFF_GPU_EIGH.md  AGENT_HANDOFF_V0_FITS.md  README.md  check_progress.py  diag_cuda_autograd.py  full_compare.py  full_compare_v2.py  monitor_v0_sweep.sh  pyproject.toml  quick_compare.py  results_cuda_autograd_diag.txt
bench/bench/: __init__.py  artifacts.py  config.py  hardware.py  harness.py  parity.py  run_all.py  smoke.py  smoke_four_way.py  smoke_parity.py
bench/bench/adapters/: __init__.py  base.py  multitorch_adapter.py  pyctm_adapter.py  pyttmult_adapter.py  ttmult_raw_adapter.py
bench/bench/postprocess/: __init__.py  load.py  plots.py  report.py
bench/results/: comparison.json  gpu_comparison.md
bench/results/report/: report.md
bench/results/report_full/: report.md
bench/tests/: test_parity_metrics.py
docs/: D4H_DISPATCHER_PLAN.md  D4H_DISPATCHER_PLAN_V2.md  PORT_NOTES.md
examples/: batch_processing_demo.py  gpu_device_selection.py
multitorch/: __init__.py  _constants.py  device_utils.py
multitorch/angular/: __init__.py  cfp.py  point_group.py  rac_generator.py  rme.py  symmetry.py  torch_blocks.py  wigner.py
multitorch/api/: __init__.py  calc.py  plot.py
multitorch/atomic/: __init__.py  blume_watson.py  hfs.py  parameter_fixtures.py  radial_mesh.py  scaled_params.py  slater.py  tables.py
multitorch/bench/v0_fitter_results/: v0_report.md  v0_summary.json  v0_summary.txt
multitorch/data/: __init__.py
multitorch/data/cfp/: __init__.py
multitorch/data/fixtures/: __init__.py
multitorch/hamiltonian/: __init__.py  assemble.py  build_ban.py  build_cowan.py  build_rac.py  charge_transfer.py  crystal_field.py  diagonalize.py  transitions.py
multitorch/io/: __init__.py  read_ban.py  read_oba.py  read_oba_pair.py  read_rcf.py  read_rme.py  write_inputs.py
multitorch/spectrum/: __init__.py  background.py  broaden.py  rixs.py  sticks.py
notebooks/: 01_quickstart.ipynb  02_pipeline_walkthrough.ipynb  03_parameter_exploration.ipynb  04_rixs_quickstart.ipynb  README.md
requirements/: environment.yml  requirements.txt
tests/: audit_parity_sweep.py  audit_results.md  conftest.py  reference_data  test_device_utils.py
tests/test_angular/: test_cfp.py  test_exchange_debug.py  test_io_rme.py  test_ledge_rac.py  test_rac_generator.py  test_rme.py  test_torch_blocks.py  test_wigner.py
tests/test_atomic/: test_hfs.py  test_io_rcf.py  test_parameter_fixtures.py  test_radial_mesh.py  test_scaled_params.py
tests/test_batch/: __init__.py  test_batch_api.py  test_batch_cowan.py  test_batch_scaling.py
tests/test_ct/: test_ct_from_scratch_status.py
tests/test_d4h/: test_d4h_from_scratch_status.py
tests/test_hamiltonian/: test_assemble.py  test_assemble_matrix_from_adds.py  test_build_ban.py  test_build_cowan.py  test_build_rac.py  test_deployment_checks.py  test_diagonalize.py  test_io_ban.py
tests/test_integration/: test_deployment_checks.py  test_doc.py  test_fixture_cache.py  test_from_scratch.py  test_nid8ct_xas.py  test_phase5_multi.py  test_phase5_parity.py  test_rixs_pair.py  test_tm_series.py
tests/test_rixs_from_scratch/: test_rixs_from_scratch_status.py
tests/test_spectrum/: test_background.py  test_broaden.py  test_sticks.py
(+64 files in other folders)
